@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Lua: "IncomingFindRequestFilter()" to apply filters to incoming C-Find requests
 * Fix of DICOMDIR generation with DCMTK 3.6.1, support of encodings
 * New function in plugin SDK: "OrthancPluginSendMultipartItem2()"
 * Fix range search if the lower or upper limit is absent
